@@ -103,6 +103,7 @@ class WC_Stripe_Intent_Controller {
 	public function verify_intent() {
 		global $woocommerce;
 
+		$order = false;
 		$gateway = $this->get_gateway();
 
 		try {
@@ -546,6 +547,7 @@ class WC_Stripe_Intent_Controller {
 	 * @throws WC_Stripe_Exception
 	 */
 	public function update_order_status_ajax() {
+		$order = false;
 		try {
 			$is_nonce_valid = check_ajax_referer( 'wc_stripe_update_order_status_nonce', false, false );
 			if ( ! $is_nonce_valid ) {
@@ -606,6 +608,7 @@ class WC_Stripe_Intent_Controller {
 	 * @throws WC_Stripe_Exception
 	 */
 	public function update_failed_order_ajax() {
+		$order = false;
 		try {
 			$is_nonce_valid = check_ajax_referer( 'wc_stripe_update_failed_order_nonce', false, false );
 			if ( ! $is_nonce_valid ) {
@@ -653,8 +656,9 @@ class WC_Stripe_Intent_Controller {
 
 			do_action( 'wc_gateway_stripe_process_payment_error', $e, $order );
 
-			/* translators: error message */
-			$order->update_status( 'failed' );
+			if ( $order ) {
+				$order->update_status( 'failed' );
+			}
 		}
 
 		wp_send_json_success();
